# Soroban-Loyalty

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAS_BENCHMARKS.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  e2e.yml  frontend-ci.yml  release.yml  rust-ci.yml
backend/: database.json  package-lock.json  package.json
backend/migrations/: 1_initial_schema.js
backend/src/: app.ts  auth.ts  env.ts  index.ts  logger.ts  migrate.ts  sentry.ts
backend/src/indexer/: indexer.ts
backend/src/routes/: admin.routes.ts  auth.routes.ts  campaign.routes.ts
backend/src/services/: audit.service.ts  campaign.service.ts
benchmarks/: storage_report.txt
contracts/campaign/: Cargo.toml
contracts/campaign/src/: expiry_prop_tests.rs  lib.rs
contracts/rewards/src/: lib.rs
contracts/token/src/: fuzz_tests.rs  lib.rs
database/migrations/: 003_create_audit_logs.sql
docs/: contrast-audit.md  deployment-guide.md
docs/adr/: 0001-adr-template.md  0002-soroban-smart-contracts.md  0003-postgresql-schema-design.md  0004-indexer-polling-design.md  0005-authentication-approach.md  README.md
docs/runbooks/: emergency-pause.md  postgres-backup-restore.md
frontend/: jest.setup.ts  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts
frontend/src/__tests__/: contrast.test.tsx
frontend/src/app/: global-error.tsx  globals.css
frontend/src/lib/: api.ts  (+1 more)
infra/terraform/: main.tf  variables.tf
monitoring/elk/: filebeat.yml  kibana-dashboards.md  logstash.conf
scripts/: backup-postgres.sh
(+11 files in other folders)
