[package]
name = "soroban-loyalty-campaign"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "25.3.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils", "alloc"] }
proptest = { version = "1.5.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
